update: Atualiza lógica da classe